# RoTools

./: .gitignore  CMakeLists.txt  DATA_STORAGE_INFO.md  DvlErrLog.txt  Instalator.iss  README.md  account_dialogs.c  account_dialogs.h  account_manager.c  account_manager.h  account_storage.c  account_storage.h  account_webview.cpp  account_webview.h  grep_search.json  gui.c  gui.h  log.c  log.h  main.c  resource.h  resources.rc  roblox_home.html  roblox_launch.cpp  roblox_launch.h  script_urls.txt  test_main.c  updater.c  updater.h  version.h
